--- a/frontend/src/template.html
+++ b/frontend/src/template.html
@@ -30,7 +30,7 @@
 <body class="font-mono text-white">
     <div class="h-screen flex bg-vscode-2">
         <!-- side bar untuk daftar room -->
-        <div class="basis-1/3 bg-vscode-4 rounded-r-2xl overflow-hidden flex flex-col">
+        <aside class="basis-1/3 bg-vscode-4 rounded-r-2xl overflow-hidden flex flex-col">
 
             <div class="wrapper">
                 <h1 class="text-center py-5 my-2 text-2xl text-white font-medium">Daftar Room</h1>
@@ -45,7 +45,7 @@
             </div>
             <!--daftar room dan setting-->
             <div id="room-setting" class="flex w-full h-full gap-2">
-                <div class="basis-1/6 bg-vscode-5 rounded-r-xl flex flex-col p-4 justify-between"> <!--setting-->
+                <div id="setting-list" class="basis-1/6 bg-vscode-5 rounded-r-xl flex flex-col p-4 justify-between"> <!--setting-->
                     <div class="flex flex-col"> 
                         <!--tambah room-->
                         <div id="add-room" class="tooltip-collection">
@@ -86,41 +86,20 @@
                     </div>
                 </div>
                 <div id="room-list" class="grow"> <!--room-->
-                    <div class="flex gap-3 py-2 hover:bg-vscode-3 rounded-l-full transition cursor-pointer">
+                    <div class="flex gap-3 py-2 hover:bg-vscode-2 rounded-l-full transition cursor-pointer">
                         <div class="bg-green-300 ml-2 basis-1/6 rounded-full"></div>
                         <div class="flex flex-col py-2">
-                            <h4 class="font-semibold text">Room 1</h4>
-                            <h4 class="font-extralight text-xs text-gray-400">hallo, apakah ada orang disinni...</h4>
-                        </div>
-                    </div>
-                    <div class="flex gap-3 py-2 hover:bg-vscode-3 rounded-l-full transition cursor-pointer">
-                        <div class="bg-green-300 ml-2 basis-1/6 rounded-full"></div>
-                        <div class="flex flex-col py-2">
-                            <h4 class="font-semibold text">Room 1</h4>
-                            <h4 class="font-extralight text-xs text-gray-400">hallo, apakah ada orang disinni...</h4>
-                        </div>
-                    </div>
-                    <div class="flex gap-3 py-2 hover:bg-vscode-3 rounded-l-full transition cursor-pointer">
-                        <div class="bg-green-300 ml-2 basis-1/6 rounded-full"></div>
-                        <div class="flex flex-col py-2">
-                            <h4 class="font-semibold text">Room 1</h4>
-                            <h4 class="font-extralight text-xs text-gray-400">hallo, apakah ada orang disinni...</h4>
-                        </div>
-                    </div>
-                    <div class="flex gap-3 py-2 hover:bg-vscode-3 rounded-l-full transition cursor-pointer">
-                        <div class="bg-green-300 ml-2 basis-1/6 rounded-full"></div>
-                        <div class="flex flex-col py-2">
-                            <h4 class="font-semibold text">Room 1</h4>
-                            <h4 class="font-extralight text-xs text-gray-400">hallo, apakah ada orang disinni...</h4>
+                            <h4 class="room-name-aside font-semibold text">Room 1</h4>
+                            <h4 class="new-msg-aside font-extralight text-xs text-gray-400">hallo, apakah ada orang disinni...</h4>
                         </div>
                     </div>
                 </div>
             </div>
 
-        </div>
+        </aside>
 
         <!-- main content untuk chat -->
-        <div class="w-full h-screen flex flex-col relative bg-vscode-3">
+        <main class="w-full h-screen flex flex-col relative bg-vscode-3">
             <!-- Header Room Chat -->
             <div class="bg-vscode-2 drop-shadow-2xl min-h-36 cursor-default">
                 <div class="flex justify-between p-5">
@@ -203,7 +182,7 @@
             <!-- Input -->
             <div id="input-msg-container" class="">
                 <div class=" w-full flex flex-row gap-x-5 px-6 py-[28px] shadow-inner group bg-vscode-2">
-                    <div class="user-id bg-white text-black rounded-lg w-1/12 text-center p-2 cursor-copy">
+                    <div class="user-id bg-white  text-black rounded-lg w-1/12 text-center p-2 cursor-copy">
                         <p>Ini ID</p>
                     </div>
                     <div class="w-10/12 text-black rounded-lg text-center">
@@ -233,7 +212,7 @@
                     </button>
                 </div>
             </div>
-        </div>
+        </main>
     </div>
 </body>
 </html>
