extend more class (#2)

--- a/frontend/src/template.html
+++ b/frontend/src/template.html
@@ -101,7 +101,7 @@
         <!-- main content untuk chat -->
         <main class="w-full h-screen flex flex-col relative bg-vscode-3">
             <!-- Header Room Chat -->
-            <div class="bg-vscode-2 drop-shadow-2xl min-h-36 cursor-default">
+            <div id="header" class="bg-vscode-2 drop-shadow-2xl min-h-36 cursor-default">
                 <div class="flex justify-between p-5">
                     <h1 class="font-semibold text-2xl pl-5 m-2">Room Chat</h1>
                     <button class="bg-white rounded-full mr-10 openModal">            
