--- a/frontend/src/template.html
+++ b/frontend/src/template.html
@@ -28,7 +28,7 @@
 <!-- file ini hanya satu, karena project ini akan buat sebagai project spa vanilla js -->
 <!-- juga file ini nantinya aakan dibuat menjadi template untuk webpack-->
 <body class="font-mono text-white">
-    <div class="h-screen flex bg-vscode-2">
+    <div id="body-program" class="h-screen flex bg-vscode-2">
         <!-- side bar untuk daftar room -->
         <aside class="basis-1/3 bg-vscode-4 rounded-r-2xl overflow-hidden flex flex-col">
 
@@ -86,13 +86,7 @@
                     </div>
                 </div>
                 <div id="room-list" class="grow"> <!--room-->
-                    <div class="flex gap-3 py-2 hover:bg-vscode-2 rounded-l-full transition cursor-pointer">
-                        <div class="bg-green-300 ml-2 basis-1/6 rounded-full"></div>
-                        <div class="flex flex-col py-2">
-                            <h4 class="room-name-aside font-semibold text">Room 1</h4>
-                            <h4 class="new-msg-aside font-extralight text-xs text-gray-400">hallo, apakah ada orang disinni...</h4>
-                        </div>
-                    </div>
+                    <!-- ini tempat roomnya nanti -->
                 </div>
             </div>
 
@@ -103,7 +97,7 @@
             <!-- Header Room Chat -->
             <div id="header" class="bg-vscode-2 drop-shadow-2xl min-h-36 cursor-default">
                 <div class="flex justify-between p-5">
-                    <h1 class="font-semibold text-2xl pl-5 m-2">Room Chat</h1>
+                    <h1 id="header-room-name" class="font-semibold text-2xl pl-5 m-2">Room Chat</h1>
                     <button class="bg-white rounded-full mr-10 openModal">            
                         <svg width="50px" height="50px" viewBox="0 0 72 72" id="emoji" xmlns="http://www.w3.org/2000/svg">
                             <g id="color">
