--- a/frontend/src/template.html
+++ b/frontend/src/template.html
@@ -30,16 +30,11 @@
 <body class="font-mono text-white bg-vscode-4">
     <div class="bg-vscode-3 shadow rounded max-w-xl p-3  absolute w-full top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
         <div class="title border-b-[1px] border-b-gray-600 mb-2 py-1 pb-2 flex gap-2">
-            <svg class="shrink-0 w-7" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="41" height="41" fill="#FFF504"/>
-                <rect x="20.5494" y="4.34717" width="16.4" height="16.4" stroke="black" stroke-width="2" stroke-linejoin="round"/>
-                <path d="M29.0458 4.59375V20.648" stroke="black" stroke-width="2"/>
-                <path d="M36.6036 12.646L20.5494 12.646" stroke="black" stroke-width="2"/>
-            </svg>
+            
             <h1 class="text-2xl">Judul grup</h1>
         </div>
         <div class="info">
-            <div class="info-bar mb-4 flex gap-2 px-2 py-0.5 rounded bg-vscode-1">
+            <div class="info-bar mb-4 flex gap-2 py-0.5 rounded">
                 <div class="message-count-container flex gap-2 text-[12px] bg-vscode-2 rounded px-2 py-1">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
                         <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -56,31 +51,41 @@
             <table class="table-auto text-sm w-3/4 mb-2">
                 <tbody>
                     <tr>
-                        <td>Created at</td>
-                        <td>12 may 2022, 12.00</td>
+                        <td class="font-bold">Created at</td>
+                        <td class="text-gray-500">12 may 2022, 12.00</td>
                     </tr>
                     <tr>
-                        <td>Creator</td>
-                        <td class="text-amber-500">[#1234]</td>
+                        <td class="font-bold">Creator</td>
+                        <td class="text-amber-300">[#1234]</td>
                     </tr>
                     <tr>
-                        <td>Description</td>
-                        <td>"ini adalah grup yang luar biasa"</td>
+                        <td class="font-bold">Description</td>
+                        <td class="text-gray-500">"ini adalah grup yang luar biasa"</td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div class="member-list flex flex-col">
-            <div class="">
+        <div class="member-list flex flex-col bg-vscode-4 rounded-sm p-2 max-h-[40vh] overflow-y-auto mb-2">
+            <h1 class="text-center">Members list</h1>
+            <div class="member py-1">
                 <p class="text-amber-300">[#1231]</p>
                 <span class="text-sm text-gray-500">zidan putra rahman</span>
             </div>
         </div>
         <div class="option flex gap-2">
-            <button class="close w-full bg-vscode-2 hover:bg-vscode-1 active:bg-vscode-4 rounded-sm text-center">
-                X Close
+            <button class="close w-full bg-vscode-2 hover:bg-vscode-1 active:bg-vscode-4 rounded-sm flex gap-2 justify-center">
+                <svg class="w-4 self-center" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+                Close
             </button>
-            <button class="log-out w-full hover:bg-red-600 active:bg-red-900 bg-red-700 rounded-sm text-center">
+            <button class="log-out w-full hover:bg-red-600 active:bg-red-900 bg-red-700 rounded-sm flex gap-2 justify-center">
+                <svg class="w-4 self-center" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                    <polyline points="16 17 21 12 16 7"></polyline>
+                    <line x1="21" y1="12" x2="9" y2="12"></line>
+                </svg>
                 Sign Out
             </button>
         </div>
